option optimize_for = LITE_RUNTIME;
message ComplexMessage {
	required int32 first_field = 1;
	enum SimpleEnum {
    	KEY_NAME = 0;
	}
	message Nested {
		required string nested_field = 1;
	}
	optional string second_field = 2 [default = "defaultValueForSecondField"];
}
